<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    <EditText
        android:id="@+id/nome_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nome_material"/>
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    <EditText
        android:id="@+id/densidade"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:selectAllOnFocus="true"
        android:layout_height="wrap_content"
        android:hint="@string/densidade"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/diametro"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diametro"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    <EditText
        android:id="@+id/preco"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:selectAllOnFocus="true"
        android:layout_height="wrap_content"
        android:hint="@string/preco"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
</ScrollView>