<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/nome_peca"
        android:hint="@string/nome_peca"
        android:maxLines="1"
        android:inputType="text"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:id="@+id/cmbGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/cmbComprimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/comprimento"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/cmbPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/peso"/>
    </RadioGroup>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/comprimento_peca"
        android:hint="@string/comprimento"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/peso_peca"
        android:hint="@string/peso"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo"/>
        <EditText
            android:id="@+id/tempo_h"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:nextFocusDown="@+id/tempo_m"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="H"/>
        <EditText
            android:id="@+id/tempo_m"
            android:layout_width="60dp"
            android:selectAllOnFocus="true"
            android:layout_height="wrap_content"
            android:text="0"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Min"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/layout_quantidade"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical">
        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btnRemove"
            android:layout_width="36dp"
            android:background="@drawable/round_buttom"
            android:layout_height="36dp"
            android:theme="@style/BrandButtonStyle"
            android:src="@drawable/ic_remove_white_24dp"

            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/quantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="number"
                android:text="1"
                android:selectAllOnFocus="true"/>
        </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btnAdd"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/round_buttom"
            android:theme="@style/BrandButtonStyle"
            android:src="@drawable/ic_add_white_24dp"

            />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/filamento"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_filamento"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></Spinner>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNovo"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/BrandButtonStyle"
            android:text="@string/novo"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/configuracao"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_configuracao"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></Spinner>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNovoConfiguracao"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/BrandButtonStyle"
            android:text="@string/novo"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>