<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nome_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_project_name"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/project_import_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/project_import_config_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/action_import_config"/>
            </LinearLayout>
            <Spinner
                android:id="@+id/spinner_projetos_config"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content"></Spinner>
            <ListView
                android:id="@+id/import_config_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"></ListView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/project_import_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/project_import_material_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/action_import_material"/>
            </LinearLayout>
            <Spinner
                android:id="@+id/spinner_projetos_material"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content"></Spinner>
            <ListView
                android:id="@+id/import_material_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"></ListView>
    </LinearLayout>
</ScrollView>